--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -542,7 +542,7 @@
     <string name="preference_not_set">Δεν έχει οριστεί</string>
     <string name="info_backup_successful">Η δημιουργία αντιγράφων ασφαλείας ήταν επιτυχής</string>
     <string name="info_download_successful">Η λήψη ήταν επιτυχής</string>
-    <string name="info_export_report">;Ένα αρχείο %3$s με το όνομα %2$s δημιουργήθηκε στον κατάλογο «%1$s». Μπορείτε το αντιγράψετε κάπου αλλού για να προστατέψετε τα δεδομένα σε περίπτωση που η συσκευή σας πάθει ζημιά, χαθεί, ή κλαπεί.</string>
+    <string name="info_export_report">Ένα αρχείο %1$s με όνομα «%2$s» δημιουργήθηκε στον επιλεγμένο φάκελο. Θα πρέπει να το αντιγράψετε με μη αυτόματο τρόπο σε άλλο μέρος για να προστατεύσετε τα δεδομένα σε περίπτωση που η συσκευή σας καταστραφεί, χαθεί ή κλαπεί.</string>
     <string name="info_export_successful">Η εξαγωγή ήταν επιτυχής</string>
     <string name="info_import_complete">Εισαγωγή Ολοκληρώθηκε</string>
     <string name="info_import_partially_complete">Έγινε μερική εισαγωγή</string>
@@ -631,7 +631,7 @@
     <string name="style_type_user_defined">Καθορισμενο-από-χρήστη</string>
     <string name="X_lbl_system">(Σύστημα)</string>
     <string name="lbl_system_default">(Προεπιλογή συστήματος)</string>
-    <string name="tip_authors_book_may_appear_more_than_once">Αν εμφανίζεται για κάθε συγγραφέα, ένα βιβλίο μπορεί να εμφανίζεται πολλές φορές σε μια λίστα. Τότε, αν διαγραφεί ένα από αυτά, θα διαγραφούν όλα από τη λίστα.</string>
+    <string name="tip_authors_book_may_appear_more_than_once">Εάν τα βιβλία εμφανίζονται για κάθε συγγραφέα του βιβλίου, ενδέχεται να εμφανίζονται πολλές φορές στη λίστα. Η διαγραφή ενός από αυτά τα βιβλία έχει ως αποτέλεσμα την αφαίρεση όλων των αντιγράφων από τη λίστα.</string>
     <string name="tip_authors_works">Χρησιμοποιούμενα εικονίδια</string>
     <string name="tip_authors_works_book">Βιβλίο.</string>
     <string name="tip_authors_works_multiple_books">Ο τίτλος υπάρχει σε πολλά βιβλία.</string>
@@ -645,7 +645,7 @@
     <string name="tip_dialog_title">Συμβουλή</string>
     <string name="tip_reset_all">Επαναφορά συμβουλών</string>
     <string name="tip_reset_done">Οι Συμβουλές έχουν επαναφερθεί</string>
-    <string name="tip_series_book_may_appear_more_than_once">Αν εμφανίζεται για κάθε σειρά, ένα βιβλίο μπορεί να εμφανίζεται πολλές φορές σε μια λίστα. Τότε, αν διαγραφεί ένα από αυτά, θα διαγραφούν όλα από τη λίστα.</string>
+    <string name="tip_series_book_may_appear_more_than_once">Εάν τα βιβλία εμφανίζονται σε όλες τις σειρές στις οποίες ανήκει το βιβλίο, ενδέχεται να εμφανίζονται πολλές φορές στη λίστα. Η διαγραφή ενός από αυτά τα βιβλία έχει ως αποτέλεσμα την αφαίρεση όλων των αντιτύπων από τη λίστα.</string>
     <string name="tip_update_fields_from_internet">Οι εξωτερικοί σύνδεσμοι ιστότοπου υποβάλλονται σε επεξεργασία μόνο αν ο ιστότοπος επικοινωνεί πραγματικά. Ως εκ τούτου, το μενού «Προβολή στο…» θα δείξει και ό, τι είναι διαθέσιμο.</string>
     <string name="tip_view_only_help">Μπορείτε να σύρετε αριστερά ή δεξιά την οθόνη, για να πάτε σε άλλα βιβλία.</string>
     <string name="info_cleanup_files">Τα προσωρινά αρχεία χρησιμοποιούν %1$s στην κάρτα SD. Αρχεία καταγραφής και άλλων δεδομένων αποθηκεύονται στην κάρτα SD σε κάθε ενημέρωση, όταν γινονται αντίγραφα ασφαλείας της βάσης δεδομένων και όταν η εφαρμογή σταματάει να λειτουργεί. Πατήστε το παρακάτω κουμπί για να καθαρίσετε αυτά τα αρχεία από την κάρτα SD. Εαν αντιμετωπίζετε διακοπές λειτουργίας ή άλλα σφάλματα, παρακαλούμε σκεφτείτε να πατήσετε πρώτα το κουμπί «%2$s».</string>
