--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -184,7 +184,7 @@
     <string name="confirm_delete_book">Книга с названием «%1$s» будет полностью удалена %2$s.\n\n Вы уверены?</string>
     <string name="confirm_delete_bookshelf">Действительно удалить книжную полку «%1$s»? Сами книги удалены не будут. Они по-прежнему будут присутствовать на любых других полках или на полке «%2$s».</string>
     <string name="confirm_delete_publisher">Действительно удалить издателя «%1$s»?\n\nСами книги не будут удалены.\n\nРассмотрите возможность изменения издателя и изменения имени издателя на имя другого издателя, чтобы сохранить эти данные.</string>
-    <string name="confirm_delete_series">Действительно удалить серию «%1$s»\?
+    <string name="confirm_delete_series">Действительно удалить серию «%1$s»?
 \n
 \nКниги этой серии не будут удалены.
 \n
@@ -209,7 +209,7 @@
 \n на
 \n «%2$s»
 \n
-\nКак вы хотите применить это изменение\?
+\nКак вы хотите применить это изменение?
 \nЗамечание: выбор «%3$s» будет применён немедленно. Если вы выберете «%4$s», будет создан новый %5$s.</string>
     <string name="confirm_scope_for_delete">Удалить заголовок «%1$s» пользователем %2$s.\n\nКак вы хотите применить это изменение? Примечание.\nВНИМАНИЕ «%3$s» нельзя отменить!</string>
     <string name="confirm_test_connection">Желательно проверить это соединение, чтобы избежать проблем в дальнейшем.</string>
@@ -558,7 +558,7 @@
     <string name="preference_not_set">Не указано</string>
     <string name="info_backup_successful">Резервное копирование выполнено успешно</string>
     <string name="info_download_successful">Загрузка прошла успешно</string>
-    <string name="info_export_report">Файл %3$s с именем %2$s был создан в папке «%1$s». Вам следует вручную скопировать его, чтобы защитить данные в случае утери или повреждения телефона.</string>
+    <string name="info_export_report">В выбранной папке был создан файл %1$s с именем «%2$s». Вы должны вручную скопировать его в другое место, чтобы защитить данные в случае повреждения, потери или кражи устройства.</string>
     <string name="info_export_successful">Экспорт успешен</string>
     <string name="info_import_complete">Импорт завершен</string>
     <string name="info_import_partially_complete">Частичный импорт выполнен</string>
@@ -644,7 +644,7 @@
     <string name="style_type_user_defined">Определенный пользователем</string>
     <string name="X_lbl_system">(системное)</string>
     <string name="lbl_system_default">(по умолчанию)</string>
-    <string name="tip_authors_book_may_appear_more_than_once">Если показывается по авторам, то одна и та же книга может появиться в списке многократно. В этом случае удаление одной из таких книг, удалит и все остальные из списка.</string>
+    <string name="tip_authors_book_may_appear_more_than_once">Если книги показаны для каждого автора книги, они могут появляться в списке несколько раз. Удаление одной из таких книг приводит к удалению всех копий из списка.</string>
     <string name="tip_authors_works">Используемые значки</string>
     <string name="tip_authors_works_book">Книга.</string>
     <string name="tip_authors_works_multiple_books">Название присутствует в нескольких книгах.</string>
@@ -658,7 +658,7 @@
     <string name="tip_dialog_title">Подсказка</string>
     <string name="tip_reset_all">Сбросить подсказки</string>
     <string name="tip_reset_done">Подсказки сброшены</string>
-    <string name="tip_series_book_may_appear_more_than_once">Если показывается по сериям, то одна и та же книга может появиться в списке многократно. В этом случае удаление одной из таких книг, удалит и все остальные из списка.</string>
+    <string name="tip_series_book_may_appear_more_than_once">Если книги показаны во всех сериях, к которым принадлежит книга, они могут появляться в списке несколько раз. Удаление одной из таких книг приводит к удалению всех копий из списка.</string>
     <string name="tip_update_fields_from_internet">Ссылки на внешние сайты обрабатываются только в том случае, если сайт действительно связался. В результате меню «Смотреть на…» также будет показывать только то, что доступно.</string>
     <string name="tip_view_only_help">вы можете потянуть экран вправо или влево, чтобы перейти на другие книги. </string>
     <string name="info_cleanup_files">Файлы, подлежащие очистке сейчас занимают %1$s на SD-карте. Лог-файлы и другие данные сохраняются на SD-карте при каждом обновлении, когда происходит резервное копирование базы, или в случае аварийного завершения программы. Нажмите кнопку внизу экрана, чтобы очистить эти файлы с SD-карты. Если у вас аварийно завершается программа или происходят иные ошибки, пожалуйста, сначала воспользуйтесь кнопкой «%2$s».</string>
