--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -28,14 +28,17 @@
            tools:locale="pt">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d livro exibido</item>
+        <item quantity="many">A exibir %1$d livros</item>
         <item quantity="other">A exibir %1$d livros</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d livro encontrado</item>
+        <item quantity="many">%1$d livros encontrados</item>
         <item quantity="other">%1$d livros encontrados</item>
     </plurals>
     <plurals name="n_stars">
         <item quantity="one">%1$s estrela</item>
+        <item quantity="many">%1$s estrelas</item>
         <item quantity="other">%1$s estrelas</item>
     </plurals>
     <string name="X_action_clear_credentials">Limpar credenciais</string>
@@ -319,7 +322,7 @@
     <string name="confirm_delete_style">Excluir o estilo “%1$s” ?</string>
     <string name="confirm_merge_bookshelves">A prateleira que está a modificar já existe. Gostaria de uni-las?</string>
     <string name="tip_reset_all">Repor dicas</string>
-    <string name="tip_authors_book_may_appear_more_than_once">Se for mostrado para cada autor, um único livro pode aparecer mais de uma vez numa lista. Em tal caso a exclusão de um desses livros excluirá todas as instâncias da lista.</string>
+    <string name="tip_authors_book_may_appear_more_than_once">Se os livros forem apresentados para cada autor do livro, podem aparecer várias vezes na lista. A eliminação de um desses livros tem o efeito de remover todos os exemplares da lista.</string>
     <string name="tip_view_only_help">Pode deslizar para a esquerda ou para a direita para navegar para outros livros.</string>
     <string name="tip_book_list">Tocar num livro mostrará os detalhes do livro. Um toque longo num item da lista dar-lhe-á mais opções.</string>
     <string name="tip_authors_works">Ícones usados</string>
@@ -436,7 +439,7 @@
     <string name="error_import_csv_column_count_mismatch">Incompatibilidade de contagem de colunas na linha %1$d</string>
     <string name="info_calibre_content_server_extension">A extensão do servidor de conteúdo do Calibre não está instalada.</string>
     <string name="tip_booklist_style_properties">Pode usar este ecrã para definir as características de um estilo específico de lista de livros. Pode alterar o nome, editar os agrupamentos para alterar a hierarquia e ajustar uma variedade de outras preferências para criar um estilo que considere útil.</string>
-    <string name="tip_series_book_may_appear_more_than_once">Se mostrado em cada série, um único livro pode aparecer mais de uma vez em uma lista. Em tal caso a exclusão de um desses livros excluirá todas as instâncias da lista.</string>
+    <string name="tip_series_book_may_appear_more_than_once">Se os livros forem apresentados em todas as séries a que pertencem, podem aparecer várias vezes na lista. A eliminação de um desses livros tem o efeito de remover todos os exemplares da lista.</string>
     <string name="size_x_small">Muito Pequeno</string>
     <string name="book_format_paperback_large">Capa mole comercial</string>
     <string name="book_format_hardcover_oblong">Capa dura - Oblong</string>
@@ -537,6 +540,7 @@
     <string name="lbl_title">Título</string>
     <string name="lbl_date_last_updated">Data da última atualização</string>
     <string name="lbl_export_books_option_all">Todos os livros</string>
+    <string name="info_export_report">Foi criado um ficheiro %1$s chamado “%2$s” na pasta seleccionada. Deve copiá-lo manualmente para outro local para proteger os dados no caso de o seu dispositivo ser danificado, perdido ou roubado.</string>
     <string name="lbl_import_options">Seleccione o que será importado.</string>
     <string name="pt_barcode_scanner">Leitor de códigos de barra</string>
     <string name="pt_scanning_beep_on_valid">Apitar se o ISBN lido é válido</string>
